--- a/source/Sylvan.Data.Excel.Tests/Sylvan.Data.Excel.Tests.csproj
+++ b/source/Sylvan.Data.Excel.Tests/Sylvan.Data.Excel.Tests.csproj
@@ -3,14 +3,6 @@
 	<PropertyGroup>
 		<TargetFrameworks>net8.0;net48</TargetFrameworks>
 		<RootNamespace>Sylvan.Data.Excel</RootNamespace>
-		<IsPackable>false</IsPackable>
-		<DisableImplicitNamespaceImports>true</DisableImplicitNamespaceImports>
-		
-		<!-- 
-		Suppress nuget vulnerability warnings, as I'm not really concerned about these in the test project.
-		Maybe I should be?
-		-->
-		<NoWarn>$(NoWarn);NU1903;xUnit2004</NoWarn>
 	</PropertyGroup>
 
 	<PropertyGroup Condition="$(TargetFramework) == 'net8.0'">
@@ -18,20 +10,16 @@
 	</PropertyGroup>
 
 	<ItemGroup>
-		<PackageReference Include="Sylvan.BuildTools.Resources" Version="0.6.2">
-			<PrivateAssets>all</PrivateAssets>
-			<IncludeAssets>runtime; build; native; contentfiles; analyzers; buildtransitive</IncludeAssets>
-		</PackageReference>
+		<PackageReference Include="Sylvan.BuildTools.Resources" Version="0.6.2" PrivateAssets="all" />
 		<PackageReference Include="Sylvan.Data" Version="0.2.16" />
-		<PackageReference Include="Sylvan.Data.Csv" Version="1.3.9" />
-		<PackageReference Include="System.Data.SqlClient" Version="4.9.0" />
+		<PackageReference Include="Sylvan.Data.Csv" Version="1.4.2" />
 		<ProjectReference Include="..\Sylvan.Data.Excel\Sylvan.Data.Excel.csproj" />
 		<Reference Include="System.IO.Compression" Condition="$(TargetFramework) == 'net48'" />
 	</ItemGroup>
 
 	
 	<ItemGroup>
-		<StaticResourceFolder Include="TestData" />
+		<StaticResourceFolder Include="TestData" Visible="false" />
 		<None Update="Data/**/*">
 			<CopyToOutputDirectory>PreserveNewest</CopyToOutputDirectory>
 		</None>
